# cost-portal

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.prod.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_portal_tables.py  0002_add_conversation_table_to_projects.py  0003_rename_project_to_siniestros_automation.py  0004_drop_conversation_table_from_projects.py  0005_add_tax_rate_to_dev_licenses.py
app/: auth.py  auth_service.py  config.py  cost_engine.py  formatting.py  fx.py  main.py  models.py  templating.py
app/routers/: auth.py  config_router.py  dashboard.py  proyectos.py  registro.py
templates/: base.html  config.html  dashboard.html  proyectos.html  registro.html
tests/: test_cost_engine.py  test_formatting.py  test_routers.py
