[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# El código vive en app/ pero el proyecto se llama "cost-portal"; sin esto hatchling
# intenta autodetectar un paquete "cost_portal" (inexistente) y falla la generación de
# metadata al hacer `pip install -e .` (igual que en siniestros-automation).
[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "cost-portal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "jinja2>=3.1",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13",
    # SSO con Microsoft Entra ID (opt-in). msal = flujo OIDC/authorization-code;
    # itsdangerous = firma de la cookie de sesión de Starlette (SessionMiddleware).
    # Mismo enfoque que siniestros-automation.
    "msal>=1.31",
    "itsdangerous>=2.2",
    # Descarga del tipo de cambio USD→EUR del feed diario del BCE (app/fx.py).
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
